[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ledgerfield"
version = "0.1.0"
description = "P2P global accounting, tax engine & payroll — offline-capable, privacy-first, knitweb-integrated"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "ledgerfield", email = "develuse@gmail.com" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ledgerfield = [
  "schemas/**/*.json",
  "tax/**/*.json",
  "rulesets/*.json",
  "static/*.html",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
